# tv-mcp

./: .gitignore  README.md  pyproject.toml
docs/: roadmap.md
src/tv_mcp/: __init__.py  ir_adapter.py  server.py
