[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv-mcp"
version = "0.1.0"
description = "FastMCP server for TV control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
]

[project.scripts]
tv-mcp = "tv_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tv_mcp"]
